<resources>
    <string name="app_name">Easy Wheels</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="card_title_text">¡Programa tu viaje!</string>
    <string name="menu_program_trip">Programa tu viaje</string>
    <string name="menu_program_week">Programa tu semana</string>
    <string name="menu_wallet">Monedero</string>
    <string name="menu_trips">Viajes</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_signout">Cerrar Sesion</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logo_description">Easy Wheels App</string>
    <string name="button_loggin">Iniciar Sesion</string>
    <string name="button_create_account">Crear Cuenta</string>
    <string name="field_validation_empty">El campo no puede estar vacio</string>
    <string name="field_validation_email">Ingrese una direccion de correo valida</string>
    <string name="login_failed_dialog_title">Error al iniciar sesion</string>
    <string name="login_failed_dialog_message">Contraseña o email invalido(s)</string>
    <string name="title_activity_maps">Map</string>


    <string name="passanger_radiobutton_text">Soy pasajero</string>
    <string name="driver_radiobutton_text">Soy conductor</string>
    <string name="type_of_usser_step_error">Debes seleccionar un rol.</string>
    <string name="passanger_type_step_title">¿Conductor o Pasajero?</string>
    <string name="destination_step_title">¿Sales o te diriges hacia la universidad?</string>
    <string name="to_univerdsity_radiobutton_text">Salgo de la univeridad</string>
    <string name="from_university_radiobutton_text">Voy hacia la universidad</string>
    <string name="destination_step_error">Debes elegir tu destino</string>

    <string name="day_step_title">¿Que día viajarás?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_step">(Vacío)</string>
    <string name="hour_step_title">¿Cual es tu hora de llegada/salida de la universidad?</string>

    <string-array name="capacity_array">
        <item>1 Cupo</item>
        <item>2 Cupos</item>
        <item>3 Cupos</item>
        <item>4 Cupos</item>
        <item>5 Cupos</item>
        <item>6 Cupos</item>
        <item>7 Cupos</item>
    </string-array>
    <string-array name="days_array">
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miercoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sabado</item>
    </string-array>
    <string-array name="hours_array">
        <item>7:00 AM</item>
        <item>8:30 AM</item>
        <item>10:00 AM</item>
        <item>11:30 AM</item>
        <item>1:00 PM</item>
        <item>2:30 PM</item>
        <item>4:00 PM</item>
        <item>5:30 PM</item>
        <item>7:00 PM</item>
    </string-array>

    <string name="name">Nombre</string>
    <string name="repassword">Re-type Password</string>
    <string name="bad_email">Debe ingresar con el correo de la universidad</string>
    <string name="inequal_password">Las contraseñas no son iguales</string>
    <string name="sended_email">Se ha enviado un correo para verificar la cuenta</string>
    <string name="wait">Espere Porfavor</string>
    <string name="email_verification_failed_dialog_message">No ha verificado su email</string>
    <string name="create_account_dialog_title">Creacion de cuenta</string>
    <string name="confirmation_text_stepper">Siguente</string>
    <string name="step_confirmation_text">Seleccionar direccion</string>
    <string name="confirmation_step_title">A continuacion seleccione su direccion de partida/destino</string>
    <string name="capacity_text_type_step">Con cuantos cupos cuentas?</string>
    <string name="user_position_marker_title">Arrastra a la ubicación deseada</string>
    <string name="searchBox_hint_toU_as_driver">Desde donde sales?</string>
    <string name="searchBox_hint_toU_as_passenger">Donde quieres que te recojan?</string>
    <string name="searchBox_hint_fromU">Cual es tu lugar de destino?</string>
    <string name="university_position_marker_title">Escuela Colombiana de ingenieria Julio Garavito</string>
    <string name="query_realize">¡Realizado!</string>
    <string name="query_realize_message">Podras ver el estado de tu solicitud en \"Viajes\"</string>
    <string name="trip_info">Informacion de viaje</string>
    <string name="more_info">Mas Información</string>
    <string name="your_location">Tu ubicacion</string>
    <string name="departure">Salida</string>
    <string name="walk_to_here">Camina hasta aqui</string>
    <string name="driver">Conductor</string>
    <string name="passenger">Pasajero</string>


</resources>
