<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_program_trip"
            android:icon="@drawable/ic_menu_car"
            android:title="@string/menu_program_trip" />
        <item
            android:id="@+id/nav_program_week"
            android:icon="@drawable/ic_menu_calender"
            android:title="@string/menu_program_week" />
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/ic_menu_money"
            android:title="@string/menu_wallet" />
        <item
            android:id="@+id/nav_trips"
            android:icon="@drawable/ic_menu_group"
            android:title="@string/menu_trips" />
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_menu_signout"
            android:title="@string/menu_signout" />
    </group>

</menu>
